deploy-ingress-loadbalancer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-lb-to-expose-outside
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/foo"
        backend:
          service:
            name: foo-service
            port:
              number: 5678
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: bar-service
            port:
              number: 5678
      - pathType: Prefix
        path: "/baz"
        backend:
          service:
            name: baz-service
            port:
              number: 5678              
---
